--- a/index.html
+++ b/index.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prevent: Safeguarding in a dangerous world</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest" />
+
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
 
     <!-- Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <!-- Navbar -->
@@ -55,16 +50,19 @@
 
 <body>
     <!-- Hero -->
-    <div class="hero">
-        <div class="hero-text">
-            <h1>Prevent</h1>
-            <p>Safeguarding in a dangerous world</p>
+    <section class="hero text-center d-flex align-items-center justify-content-center">
+        <div class="container">
+            <div class="hero-text">
+                <h1>Prevent</h1>
+                <p class="lead">Safeguarding in a dangerous world</p>
+            </div>
         </div>
-    </div>
+    </section>
 
     <!-- Main -->
     <main>
-        <div class="container">
+        <!-- Outline -->
+        <section class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <h2>What it is</h2>
@@ -104,8 +102,71 @@
                         knowing who to talk to about your concerns are all ways you can help preventing horrible things
                         happening.</p>
                 </div>
-
+            </div>
+        </section>
+        <!-- Glossary -->
+        <section class="container">
+            <h1>Glossary</h1>
+            <div class="row">
+                <div class="col-lg-3">
+                    <h2>Safeguarding</h2>
+                    <p> <a
+                            href="https://www.england.nhs.uk/safeguarding/about/#:~:text=Safeguarding%20means%20protecting%20a%20citizen's,adults%20is%20a%20collective%20responsibility.">According
+                            to the NHS</a>Safeguarding means protecting a citizen's health, wellbeing and human rights;
+                        enabling them to
+                        live free from harm, abuse and neglect. It is an integral part of providing high-quality health
+                        care. Safeguarding children, young people and adults is a collective responsibility. </p>
+                </div>
+                <div class="col-lg-3">
+                    <h2>Radicalisation</h2>
+                    <p>Radicalisation is the process by which a person comes to support or be involved in extremist
+                        ideologies. It is in of iteself a form of harm. </p>
+                </div>
+                <div class="col-lg-3">
+                    <h2>Extremism</h2>
+                    <p>Extremism is the holding of extreme political or religious views. It is not illegal to hold these
+                        views, but it can be harmful if they lead to violence or other illegal activities. What is
+                        considered to be extremism can change over time, and different societies have different opinions
+                        on what counts as an extremist view.</p>
+                </div>
+                <div class="col-lg-3">
+                    <h2>Terrorism</h2>
+                    <p>Terrorism is the use of violence or the threat of violence to achieve a political goal. The
+                        European Union defines terrorism as acts that:</p>
+                    <ul>
+                        <li>Intimidate a population,</li>
+                        <li>Compel a government or international organisation to act or not act</li>
+                        <li>Destabilise or destroy a country's political, constituutional, economic or social structures
+                        </li>
+                    </ul>
+                </div>
+        </section>
     </main>
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Prevent Project</h5>
+                    <p>Safeguarding in a dangerous world.</p>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Links</h5>
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="#!" class="text-dark">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-dark">Terms of Service</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3 bg-dark text-white">
+            © 2023 Prevent Project
+        </div>
+    </footer>
 
     <!-- Bootstrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
