Add: Card structure for the four main elements on the home page, pinned nav bar, added escape button to the site

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
 </head>
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Prevent</a>
+        <a class="navbar-brand" href="#">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave this page quickly</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,6 +55,8 @@
             <div class="hero-text">
                 <h1>Prevent</h1>
                 <p class="lead">Safeguarding in a dangerous world</p>
+                <a href="https://act.campaign.gov.uk/" class="btn btn-primary btn-lg" role="button">Something to
+                    report?</a>
             </div>
         </div>
     </section>
@@ -64,43 +66,76 @@
         <!-- Outline -->
         <section class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>What it is</h2>
-                    <p>Prevent is the name given by the UK government to the safeguarding strategy designed to prevent
-                        vulnerable people from being drawn into extremism of any kind. It isn't just about policing
-                        people, and most referrals do not lead to any further police action. Often, referrals end up
-                        with the person being signposted to other services that can help them with their problems, such
-                        as health, mental health housing or education support.</p>
-                    <p>Fundamentally, prevent is about engaging with communities to try and stop people from being drawn
-                        into extremism and look after both those who are vulnerable, and those around them. All
-                        referrals are handled sensitively and in confidence, which means reporting a concern will not
-                        make you look bad, and if it turns out that the person you were worried about is not actually at
-                        risk, it should not cause them any issues.</p>
+                <div class="col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow">
+                        <!-- <img class="card-img-top" src="assets/images/what.jpg" alt="What is prevent"> -->
+                        <div class="card-body">
+                            <h5 class="card-title">What it is</h5>
+                            <p>Prevent is the name given by the UK government to the safeguarding strategy designed to
+                                prevent
+                                vulnerable people from being drawn into extremism of any kind. It isn't just about
+                                policing
+                                people, and most referrals do not lead to any further police action. Often, referrals
+                                end up
+                                with the person being signposted to other services that can help them with their
+                                problems,
+                                such
+                                as health, mental health housing or education support.</p>
+                            <p>Fundamentally, prevent is about engaging with communities to try and stop people from
+                                being
+                                drawn
+                                into extremism and look after both those who are vulnerable, and those around them. All
+                                referrals are handled sensitively and in confidence, which means reporting a concern
+                                will
+                                not
+                                make you look bad, and if it turns out that the person you were worried about is not
+                                actually at
+                                risk, it should not cause them any issues.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <h2>Why it is important</h2>
-                    <p>Sadly, terrorism and extremism have become something that effects us all. Prevent strategies aim
-                        to try and stop more events from happening, and help people before they get radicalised further.
-                        Particularly with social media, it is much easier for lies or misinformation to circulate very
-                        quickly.</p>
-                    <p>If Prevent can stop even a single terrorist attack, it has succeeded. But more than that, prevent
-                        tries to stop people from getting radicalised to the point that they would even consider
-                        committing an act of terror, which saves their life too.</p>
+                <div class="col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow">
+                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
+                        <div class="card-body">
+                            <h5 class="card-title">Why it is important</h5>
+                        <p>Sadly, terrorism and extremism have become something that effects us all. Prevent strategies
+                            aim
+                            to try and stop more events from happening, and help people before they get radicalised
+                            further.
+                            Particularly with social media, it is much easier for lies or misinformation to circulate
+                            very
+                            quickly.</p>
+                        <p>If Prevent can stop even a single terrorist attack, it has succeeded. But more than that,
+                            prevent
+                            tries to stop people from getting radicalised to the point that they would even consider
+                            committing an act of terror, which saves their life too.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <h2>What it should not be</h2>
-                    <p>Despite the best of intentions, Prevent is not without controversy. There have been accusations
-                        of racial profiling, stereotyping, and over-reach with regards to the powers it gives officers.
-                        Some people think that it goes too far, and that some of the groups labelled as extremist should
-                        not be.</p>
+                <div class="col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow">
+                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
+                        <div class="card-body">
+                        <h5 class="card-title">What it should not be</h5>
+                        <p>Despite the best of intentions, Prevent is not without controversy. There have been accusations
+                            of racial profiling, stereotyping, and over-reach with regards to the powers it gives officers.
+                            Some people think that it goes too far, and that some of the groups labelled as extremist should
+                            not be.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <h2>How to do it right</h2>
-                    <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned about
-                        someone not looking after themselves, or for having poor mental health, you can end up concerned
-                        about radicalisation. Community engagement, talking to people, moderating online communities and
-                        knowing who to talk to about your concerns are all ways you can help preventing horrible things
-                        happening.</p>
+                <div class="col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow">
+                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
+                        <div class="card-body">
+                            <h5 class="card-title">How to do it right</h5>
+                        <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned about
+                            someone not looking after themselves, or for having poor mental health, you can end up concerned
+                            about radicalisation. Community engagement, talking to people, moderating online communities and
+                            knowing who to talk to about your concerns are all ways you can help preventing horrible things
+                            happening.</p>
+                    </div>
                 </div>
             </div>
         </section>
