Add: what it is page content complete, styling to be done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <!-- Navbar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave this page quickly</a>
+        <a class="navbar-brand" href="index.html">Prevent</a><a class="nav-link" href="https://www.youtube.com/">Leave
+            this page quickly</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -102,17 +103,19 @@
                         <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
                             <h5 class="card-title">Why it is important</h5>
-                        <p>Sadly, terrorism and extremism have become something that effects us all. Prevent strategies
-                            aim
-                            to try and stop more events from happening, and help people before they get radicalised
-                            further.
-                            Particularly with social media, it is much easier for lies or misinformation to circulate
-                            very
-                            quickly.</p>
-                        <p>If Prevent can stop even a single terrorist attack, it has succeeded. But more than that,
-                            prevent
-                            tries to stop people from getting radicalised to the point that they would even consider
-                            committing an act of terror, which saves their life too.</p>
+                            <p>Sadly, terrorism and extremism have become something that effects us all. Prevent
+                                strategies
+                                aim
+                                to try and stop more events from happening, and help people before they get radicalised
+                                further.
+                                Particularly with social media, it is much easier for lies or misinformation to
+                                circulate
+                                very
+                                quickly.</p>
+                            <p>If Prevent can stop even a single terrorist attack, it has succeeded. But more than that,
+                                prevent
+                                tries to stop people from getting radicalised to the point that they would even consider
+                                committing an act of terror, which saves their life too.</p>
                         </div>
                     </div>
                 </div>
@@ -120,11 +123,14 @@
                     <div class="card shadow">
                         <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
-                        <h5 class="card-title">What it should not be</h5>
-                        <p>Despite the best of intentions, Prevent is not without controversy. There have been accusations
-                            of racial profiling, stereotyping, and over-reach with regards to the powers it gives officers.
-                            Some people think that it goes too far, and that some of the groups labelled as extremist should
-                            not be.</p>
+                            <h5 class="card-title">What it should not be</h5>
+                            <p>Despite the best of intentions, Prevent is not without controversy. There have been
+                                accusations
+                                of racial profiling, stereotyping, and over-reach with regards to the powers it gives
+                                officers.
+                                Some people think that it goes too far, and that some of the groups labelled as
+                                extremist should
+                                not be.</p>
                         </div>
                     </div>
                 </div>
@@ -133,14 +139,18 @@
                         <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
                             <h5 class="card-title">How to do it right</h5>
-                        <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned about
-                            someone not looking after themselves, or for having poor mental health, you can end up concerned
-                            about radicalisation. Community engagement, talking to people, moderating online communities and
-                            knowing who to talk to about your concerns are all ways you can help preventing horrible things
-                            happening.</p>
+                            <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned
+                                about
+                                someone not looking after themselves, or for having poor mental health, you can end up
+                                concerned
+                                about radicalisation. Community engagement, talking to people, moderating online
+                                communities and
+                                knowing who to talk to about your concerns are all ways you can help preventing horrible
+                                things
+                                happening.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
         <!-- Glossary -->
         <section class="container">
@@ -150,7 +160,12 @@
                     <div class="card shadow">
                         <div class="card-body">
                             <h2 class="card-title">Safeguarding</h2>
-                            <p class="card-text"><a href="https://www.england.nhs.uk/safeguarding/about/#:~:text=Safeguarding%20means%20protecting%20a%20citizen's,adults%20is%20a%20collective%20responsibility.">According to the NHS</a> Safeguarding means protecting a citizen's health, wellbeing and human rights; enabling them to live free from harm, abuse and neglect. It is an integral part of providing high-quality health care. Safeguarding children, young people and adults is a collective responsibility.</p>
+                            <p class="card-text"><a
+                                    href="https://www.england.nhs.uk/safeguarding/about/#:~:text=Safeguarding%20means%20protecting%20a%20citizen's,adults%20is%20a%20collective%20responsibility.">According
+                                    to the NHS</a> Safeguarding means protecting a citizen's health, wellbeing and human
+                                rights; enabling them to live free from harm, abuse and neglect. It is an integral part
+                                of providing high-quality health care. Safeguarding children, young people and adults is
+                                a collective responsibility.</p>
                         </div>
                     </div>
                 </div>
@@ -158,7 +173,8 @@
                     <div class="card shadow">
                         <div class="card-body">
                             <h2 class="card-title">Radicalisation</h2>
-                            <p class="card-text">Radicalisation is the process by which a person comes to support or be involved in extremist ideologies. It is in of itself a form of harm.</p>
+                            <p class="card-text">Radicalisation is the process by which a person comes to support or be
+                                involved in extremist ideologies. It is in of itself a form of harm.</p>
                         </div>
                     </div>
                 </div>
@@ -166,7 +182,10 @@
                     <div class="card shadow">
                         <div class="card-body">
                             <h2 class="card-title">Extremism</h2>
-                            <p class="card-text">Extremism is the holding of extreme political or religious views. It is not illegal to hold these views, but it can be harmful if they lead to violence or other illegal activities. What is considered to be extremism can change over time, and different societies have different opinions on what counts as an extremist view.</p>
+                            <p class="card-text">Extremism is the holding of extreme political or religious views. It is
+                                not illegal to hold these views, but it can be harmful if they lead to violence or other
+                                illegal activities. What is considered to be extremism can change over time, and
+                                different societies have different opinions on what counts as an extremist view.</p>
                         </div>
                     </div>
                 </div>
@@ -174,11 +193,13 @@
                     <div class="card shadow">
                         <div class="card-body">
                             <h2 class="card-title">Terrorism</h2>
-                            <p class="card-text">Terrorism is the use of violence or the threat of violence to achieve a political goal. The European Union defines terrorism as acts that:</p>
+                            <p class="card-text">Terrorism is the use of violence or the threat of violence to achieve a
+                                political goal. The European Union defines terrorism as acts that:</p>
                             <ul>
                                 <li>Intimidate a population,</li>
                                 <li>Compel a government or international organisation to act or not act</li>
-                                <li>Destabilise or destroy a country's political, constitutional, economic or social structures</li>
+                                <li>Destabilise or destroy a country's political, constitutional, economic or social
+                                    structures</li>
                             </ul>
                         </div>
                     </div>
@@ -213,7 +234,7 @@
     <!-- Bootstrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 
