--- a/what-it-is.html
+++ b/what-it-is.html
@@ -58,10 +58,9 @@
     <section class="hero text-center d-flex align-items-center justify-content-center">
         <div class="container">
             <div class="hero-text">
-                <h1>Prevent</h1>
-                <p class="lead">Safeguarding in a dangerous world</p>
-                <a href="https://act.campaign.gov.uk/" class="btn btn-primary btn-lg" role="button">Something to
-                    report?</a>
+                <h1>What is prevent?</h1>
+                <p class="lead">A summary of prevent guidance and objectives</p>
+                <a href="#prevents-objectives" class="btn btn-primary btn-lg" role="button">Prevent's objectives.</a>
             </div>
         </div>
     </section>
@@ -70,6 +69,7 @@
     <main>
         <section>
             <!-- Prevents Objectives -->
+            <a id="prevents-objectives"></a>
             <div class="container justify-content-center text-center">
                 <h1>Prevent's Objectives</h1>
                 <div class="row">
