Remove: Why it is important section, card, and nav link. Decided it is self evident why preventing terrorism is important.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
                     <a class="nav-link" href="what-it-is.html">What it is</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Why it is important</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">What it should not be</a>
                 </li>
                 <li class="nav-item">
@@ -102,24 +99,20 @@
                     <div class="card shadow">
                         <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
-                            <h5 class="card-title">Why it is important</h5>
-                            <p>Sadly, terrorism and extremism have become something that effects us all. Prevent
-                                strategies
-                                aim
-                                to try and stop more events from happening, and help people before they get radicalised
-                                further.
-                                Particularly with social media, it is much easier for lies or misinformation to
-                                circulate
-                                very
-                                quickly.</p>
-                            <p>If Prevent can stop even a single terrorist attack, it has succeeded. But more than that,
-                                prevent
-                                tries to stop people from getting radicalised to the point that they would even consider
-                                committing an act of terror, which saves their life too.</p>
+                            <h5 class="card-title">How you can help</h5>
+                            <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned
+                                about
+                                someone not looking after themselves, or for having poor mental health, you can end up
+                                concerned
+                                about radicalisation. Community engagement, talking to people, moderating online
+                                communities and
+                                knowing who to talk to about your concerns are all ways you can help preventing horrible
+                                things
+                                happening.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-4 d-flex align-items-stretch">
+                <div class="col-12 mb-4 d-flex align-items-stretch">
                     <div class="card shadow">
                         <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
                         <div class="card-body">
@@ -131,23 +124,6 @@
                                 Some people think that it goes too far, and that some of the groups labelled as
                                 extremist should
                                 not be.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4 d-flex align-items-stretch">
-                    <div class="card shadow">
-                        <!-- <img class="card-img-top" src="assets/images/why.jpg" alt="Why is prevent important"> -->
-                        <div class="card-body">
-                            <h5 class="card-title">How to do it right</h5>
-                            <p>Prevent is fundamentally about safeguarding. In the same ways you can become concerned
-                                about
-                                someone not looking after themselves, or for having poor mental health, you can end up
-                                concerned
-                                about radicalisation. Community engagement, talking to people, moderating online
-                                communities and
-                                knowing who to talk to about your concerns are all ways you can help preventing horrible
-                                things
-                                happening.</p>
                         </div>
                     </div>
                 </div>
