Add: custom class for the objectives section on what-it-is to style sheet

--- a/what-it-is.html
+++ b/what-it-is.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="#">What it should not be</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">How to do it right</a>
+                    <a class="nav-link" href="#">How you can help</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#glossary">Glossary of terms</a>
@@ -64,19 +64,26 @@
 
     <!-- Main -->
     <main>
+        <!-- Prevents Objectives -->
         <section>
-            <!-- Prevents Objectives -->
             <a id="prevents-objectives"></a>
-            <div class="container justify-content-center text-center">
+            <div class="container text-center">
                 <h1>Prevent's Objectives</h1>
-                <div class="row">
-                    <div class="col-4">Tackle the ideological causes
-                        of terrorism </div>
-                    <div class="col-4">Intervene early to support people
-                        susceptible to radicalisation</div>
-                    <div class="col-4">Enable people who have already
-                        engaged in terrorism to disengage
-                        and rehabilitate</div>
+                <div class="objectives">
+                        <div class="card shadow">
+                            <div class="card-body">Tackle the ideological causes
+                                of terrorism and extremism</div>
+                        </div>
+                        <div class="card shadow">
+                            <div class="card-body">Intervene early to support people
+                                susceptible to radicalisation</div>
+                        </div>
+                        <div class="card shadow">
+                            <div class="card-body">Enable people who have already
+                                engaged in terrorism to disengage
+                                and rehabilitate </div>
+                        </div>
+                    </div>
                 </div>
         </section>
         <!-- The Prevent Duty -->
@@ -257,7 +264,8 @@
                 <h1 class="text-center">Further information</h1>
                 <p>All of the information contained in this page was taken from the current prevent duty guidance for
                     England and Wales, as a brief summary and overview. If you would like to know more <a
-                        href="https://www.gov.uk/government/publications/prevent-duty-guidance" target="_blank">please follow this link.</a></p>
+                        href="https://www.gov.uk/government/publications/prevent-duty-guidance" target="_blank">please
+                        follow this link.</a></p>
         </section>
     </main>
     <!-- Footer -->
