--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="#">What it should not be</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">How to do it right</a>
+                    <a class="nav-link" href="#">How you can help</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#glossary">Glossary of terms</a>
