--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="what-it-is.html">What it is</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">What it should not be</a>
+                    <a class="nav-link" href="what-it-should-not-be.html">What it should not be</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">How you can help</a>
